--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Nu-Tech Engineering & Testing</title>
+		<title>Nu-Tech Engineering and Testing</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -24,7 +24,7 @@
 						<li><a href="#intro">Intro</a></li>
 						<li><a href="#one">What I Do</a></li>
 						<li><a href="#two">Who I Am</a></li>
-						<li><a href="#Services">Services</a></li>
+						<li><a href="#services">Services</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -72,7 +72,7 @@
 			</section>
 
 		<!-- Work -->
-			<section id="work" class="main style3 primary">
+			<section id="services" class="main style3 primary">
 				<div class="content">
 					<header>
 						<h2>Services</h2>
