--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
 
-		<!-- Work -->
+		<!-- Services -->
 			<section id="services" class="main style3 primary">
 				<div class="content">
 					<header>
