--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
 					<header>
 						<h2>Hello</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed
-					by <a href="https://html5up.net">HTML5 UP</a>, built on <a href="http://skel.io">Skel</a>,
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<p><strong>Nu-Tech Engineering & Testing</strong>, a company originated in <strong>Calgary 
+						Alberta</strong> had served to numerous clients for both residential and commercial 
+						projects in the <strong>Geotechnical and Structural Engineering</strong> since 1983. 
+						The company is specialized in Soil Investigation, Foundation Design, Piles Design, 
+						Retaining Wall Design, and Slope Stability Analysis, Structural Design and Structural 
+						modification for the factories, and residential home. We vow to use our special 
+						knowledge and new technology to come out with the best design and durable structures, 
+						still save the cost and meet the expectation for our clients.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
