--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<header>
 						<h2>Hello</h2>
 					</header>
-					<p><strong>Nu-Tech Engineering & Testing</strong>, a company originated in <strong>Calgary 
+					<p><strong>Nu-Tech Engineering and Testing</strong>, a company originated in <strong>Calgary 
 						Alberta</strong> had served to numerous clients for both residential and commercial 
 						projects in the <strong>Geotechnical and Structural Engineering</strong> since 1983. 
 						The company is specialized in Soil Investigation, Foundation Design, Piles Design, 
