--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
-						<li><a href="#one">What I Do</a></li>
+						<li><a href="#one">What We Do</a></li>
 						<li><a href="#two">Who I Am</a></li>
 						<li><a href="#services">Services</a></li>
 						<li><a href="#contact">Contact</a></li>
@@ -39,11 +39,7 @@
 					<p><strong>Nu-Tech Engineering and Testing</strong>, a company originated in <strong>Calgary 
 						Alberta</strong> had served to numerous clients for both residential and commercial 
 						projects in the <strong>Geotechnical and Structural Engineering</strong> since 1983. 
-						The company is specialized in Soil Investigation, Foundation Design, Piles Design, 
-						Retaining Wall Design, and Slope Stability Analysis, Structural Design and Structural 
-						modification for the factories, and residential home. We vow to use our special 
-						knowledge and new technology to come out with the best design and durable structures, 
-						still save the cost and meet the expectation for our clients.</p>
+						</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -54,11 +50,13 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>What We Do</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>We specialized in Soil Investigation, Foundation Design, Piles Design, 
+						Retaining Wall Design, and Slope Stability Analysis, Structural Design and Structural 
+						modification for the factories, and residential home. We vow to use our special 
+						knowledge and new technology to come out with the best design and durable structures, 
+						still save the cost and meet the expectation for our clients.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
