--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/photo1.jpg" title="Crane foundation design with installation of steel piles" alt="" /></a>
+								<a href="images/fulls/photo1.jpg" class="image fit"><img src="images/thumbs/photo1.jpg" title="Crane foundation design with installation of steel piles" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="images/fulls/photo2.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
 							</article>
 							<article class="from-left">
 								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
