--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>Nu-Tech Engineering & Testing</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
@@ -79,9 +79,7 @@
 				<div class="content">
 					<header>
 						<h2>Services</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<p>Some photos of examples of our work</p>
 					</header>
 
 					<!-- Gallery  -->
@@ -90,19 +88,25 @@
 								<a href="images/fulls/photo1.jpg" class="image fit"><img src="images/thumbs/photo1.jpg" title="Crane foundation design with installation of steel piles" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/photo2.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="images/fulls/photo2.jpg" class="image fit"><img src="images/thumbs/photo2.jpg" title="Geotechnical engineering work" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+								<a href="images/fulls/photo33.jpg" class="image fit"><img src="images/thumbs/photo3.jpg" title="Removing a garage post and replacing with steel beam" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
+								<a href="images/fulls/photo4.jpg" class="image fit"><img src="images/thumbs/photo4.jpg" title="Removing a garage post and replacing with steel beam" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
+								<a href="images/fulls/photo5.jpg" class="image fit"><img src="images/thumbs/photo5.jpg" title="Retaining wall design" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
+								<a href="images/fulls/photo6.jpg" class="image fit"><img src="images/thumbs/photo6.jpg" title="Wood foundation" alt="" /></a>
+							</article>
+							<article class="from-left">
+								<a href="images/fulls/photo7.jpg" class="image fit"><img src="images/thumbs/photo7.jpg" title="Wood foundation" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/photo8.jpg" class="image fit"><img src="images/thumbs/photo8.jpg" title="Alternative to open concept" alt="" /></a>
 							</article>
 						</div>
 
