--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
 					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#services" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Services -->
