--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>Wen Wu is a Professional Engineer with The Association of Professional Engineers and GeoScientiests					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
+					of Alberta (APEGA)</p>
 				</div>
 				<a href="#services" class="button style2 down anchored">Next</a>
 			</section>
