--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>Wen Wu is a Professional Engineer with The Association of Professional Engineers and GeoScientiests					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
+					<p>Wen Wu is a Professional Engineer with The Association of Professional Engineers and GeoScientists
 					of Alberta (APEGA)</p>
 				</div>
 				<a href="#services" class="button style2 down anchored">Next</a>
