--- a/index.html
+++ b/index.html
@@ -120,14 +120,12 @@
 						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
 					</header>
 					<div class="box">
-						<form method="post" action="#">
-							<div class="field half first"><input type="text" name="name" placeholder="Name" /></div>
-							<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
-							<div class="field"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
-							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</form>
+						<p>email: <a href="mailto:nutechgeng10@gmail.com?Subject=Inquiries" target="_top">nutecheng10@gmail.com</a></p>
+						<p><strong>Address:</strong></p>
+            					<p>2311 54 Avenue S.W.</p>
+            					<p>Calgary, Alberta</p>
+            					<p>T3E 1L9</p>
+            					<p><strong>Telephone: </strong>403-241-5855</p>
 					</div>
 				</div>
 			</section>
