--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 				<div class="content">
 					<header>
 						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<p>For a free quote, you can reach us at:</p>
 					</header>
 					<div class="box">
 						<p>email: <a href="mailto:nutechgeng10@gmail.com?Subject=Inquiries" target="_top">nutecheng10@gmail.com</a></p>
